Cleaned code
git-svn-id: https://svn.apache.org/repos/asf/incubator/ognl/trunk@1104603 13f79535-47bb-0310-9956-ffa450edef68